syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bookstore.cart.grpc";
option java_outer_classname = "CartServiceProto";

service CartService {
    rpc GetCartByUser(GetCartRequest) returns (CartResponse);
    rpc AddItemToCart(AddItemRequest) returns (CartResponse);
    rpc ClearCart(ClearCartRequest) returns (CartResponse);
}

message GetCartRequest {
    int64 userId = 1;
}

message AddItemRequest {
    int64 userId = 1;
    int64 bookId = 2;
    int32 quantity = 3;
}

message ClearCartRequest {
    int64 userId = 1;
}

message CartResponse {
    int64 userId = 1;
    repeated CartItem items = 2;
    double totalPrice = 3;
}

message CartItem {
    int64 bookId = 1;
    string title = 2;
    string author = 3;
    double price = 4;
    int32 quantity = 5;
}